@@ -339,6 +339,8 @@ SQLRETURN SQLBrowseConnectW(
 
         if ( !__connect_part_one( connection, lib_name, driver_name, &warnings ))
         {
+            __disconnect_part_four( connection );       /* release unicode handles */
+
             dm_log_write( __FILE__,
                     __LINE__,
                     LOG_INFO,
@@ -358,6 +360,7 @@ SQLRETURN SQLBrowseConnectW(
                         "Error: IM001" );
 
             __disconnect_part_one( connection );
+            __disconnect_part_four( connection );       /* release unicode handles */
             __post_internal_error( &connection -> error,
                     ERROR_IM001, NULL,
                     connection -> environment -> requested_version );
@@ -530,6 +533,7 @@ SQLRETURN SQLBrowseConnectW(
     		if ( ret != SQL_NEED_DATA ) 
 			{
         		__disconnect_part_one( connection );
+                __disconnect_part_four( connection );       /* release unicode handles */
         		connection -> state = STATE_C2;
 			}
 			else 
@@ -606,6 +610,7 @@ SQLRETURN SQLBrowseConnectW(
     		if ( ret != SQL_NEED_DATA ) 
 			{
         		__disconnect_part_one( connection );
+                __disconnect_part_four( connection );       /* release unicode handles */
         		connection -> state = STATE_C2;
 			}
 			else 
@@ -631,6 +636,7 @@ SQLRETURN SQLBrowseConnectW(
         {
             __disconnect_part_two( connection );
             __disconnect_part_one( connection );
+            __disconnect_part_four( connection );       /* release unicode handles */
 
             return function_return( SQL_HANDLE_DBC, connection, SQL_ERROR );
         }
